objects/Data_Transformation__c.object
<CustomObject>
    <description>Custom Object to store data transformation</description>
    <fields>
        <fullName>Lookup_Value__c</fullName>
        <label>Lookup Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Value__c</fullName>
        <label>Return Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specified_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Transformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transformation_Description__c</fullName>
        <label>Transformation Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Data Transformation</label>
    <listViews>
        <fullName>All_Unica</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Lookup_Value__c</columns>
        <columns>Return_Value__c</columns>
        <columns>Source__c</columns>
        <columns>Transformation_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>contains</operation>
            <value>Unica</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>contains</operation>
            <value>Dual</value>
        </filters>
        <label>All Unica</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dual_Field_Rep_Account_Mgmt</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Lookup_Value__c</columns>
        <columns>Return_Value__c</columns>
        <columns>Source__c</columns>
        <columns>Transformation_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lookup_Value__c</field>
            <operation>equals</operation>
            <value>Dual Field Rep - Account Mgmt</value>
        </filters>
        <filters>
            <field>Lookup_Value__c</field>
            <operation>equals</operation>
            <value>Dual Field Rep – Account Mgmt</value>
        </filters>
        <label>Dual Field Rep - Account Mgmt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dual_Rep</fullName>
        <columns>Lookup_Value__c</columns>
        <columns>Return_Value__c</columns>
        <columns>Source__c</columns>
        <columns>Transformation_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lookup_Value__c</field>
            <operation>equals</operation>
            <value>Dual Account Mgmt and Field Rep</value>
        </filters>
        <label>Dual Rep</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LatAmRENOptyOwner</fullName>
        <columns>Lookup_Value__c</columns>
        <columns>Return_Value__c</columns>
        <columns>Transformation_Description__c</columns>
        <columns>Specified_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>LatAmRENOptyOwner</value>
        </filters>
        <label>LatAmRENOptyOwner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unica_Oppty_Owner</fullName>
        <columns>Lookup_Value__c</columns>
        <columns>Return_Value__c</columns>
        <columns>Source__c</columns>
        <columns>Transformation_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>contains</operation>
            <value>Unica</value>
        </filters>
        <label>Unica Oppty Owner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unica_and_Dual</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Return_Value__c</columns>
        <columns>Lookup_Value__c</columns>
        <columns>Transformation_Description__c</columns>
        <columns>Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Unica Opty Owner</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>startsWith</operation>
            <value>Dual Rep</value>
        </filters>
        <label>Unica and Dual</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Data Transformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Transformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>